--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -4,11 +4,11 @@
 			<form class="login">
 				<div class="login__field">
 					<i class="login__icon fas fa-user"></i>
-					<input type="text" class="login__input" placeholder="User name / Email">
+					<input type="text"[(ngModel)]="loginObj.EmailId" class="login__input" placeholder="User name / Email">
 				</div>
 				<div class="login__field">
 					<i class="login__icon fas fa-lock"></i>
-					<input type="password" class="login__input" placeholder="Password">
+					<input type="password" [(ngModel)]="loginObj.Password"class="login__input" placeholder="Password">
 				</div>
 				<button class="button login__submit">
 					<span class="button__text">Log In Now</span>
