Worked on the login and added proxy file

--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -4,13 +4,13 @@
 			<form class="login">
 				<div class="login__field">
 					<i class="login__icon fas fa-user"></i>
-					<input type="text"[(ngModel)]="loginObj.EmailId" class="login__input" placeholder="User name / Email">
+					<input type="text" name="EmailId"   [(ngModel)]="loginObj.EmailId" class="login__input" placeholder="User name / Email">
 				</div>
 				<div class="login__field">
 					<i class="login__icon fas fa-lock"></i>
-					<input type="password" [(ngModel)]="loginObj.Password"class="login__input" placeholder="Password">
+					<input type="password" name= "Password" [(ngModel)]="loginObj.Password"class="login__input" placeholder="Password">
 				</div>
-				<button class="button login__submit">
+				<button class="button login__submit" (click)="login()">
 					<span class="button__text">Log In Now</span>
 					<i class="button__icon fas fa-chevron-right"></i>
 				</button>				
